# Lexagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml  railway-streamlit.toml  railway.toml  requirements.txt  ruff.toml  transcript.md
app/: agent.py  context.py  init_langfuse_prompts.py  main.py  models.py  security.py  storage.py  tools.py
docs/: BEST_PRACTICES.md  CLI_LANGFUSE_RAILWAY.md  DEPLOYMENT.md  DEPLOYMENT_FAILURE_REPORT.md  EVALUATION.md  LANGFUSE_SETUP.md  LOCALHOST_TEST_LINKS.md  RAILWAY_CONNECT_SOURCE.md  RAILWAY_DEPLOY.md  RAILWAY_FIX_BUILDER.md  RAILWAY_FRONTEND_SETUP.md  RAILWAY_RAILPACK_OPTION.md  RAILWAY_REACT_ONLY.md  REACT_FRONTEND_SUMMARY.md  README.md  REMAINING_TASKS.md  SECURITY.md  TESTING.md  TEST_AND_DOCKER_EXECUTION_REPORT.md  UPDATES.md
frontend/: ui.py
frontend-react/: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  components.json  index.html  package-lock.json  package.json  railway.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend-react/src/: App.css  App.tsx  index.css
frontend-react/src/components/: ErrorMessage.tsx  ExecutionControls.tsx  FinalReport.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  NewSession.tsx  SessionView.tsx  Sidebar.tsx  TaskCard.tsx
scripts/: deploy-railway.sh  railway_setup_volume_and_vars.sh  update_langfuse_prompts_cli.sh  verify_before_merge.sh
scripts/prompts/: compress-results.json  generate-plan.json  generate-report.json  refine-query.json  reflect.json
(+23 files in other folders)
